--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "lint-staged": "^9.5.0",
+    "prettier": "2.2.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
@@ -33,5 +34,10 @@
       "vue-cli-service lint",
       "git add"
     ]
-  }
+  },
+  "eslintConfig": {
+    "globals": {
+        "vue": true
+    }
+}
 }
